--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -14,7 +14,7 @@
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
   <script type="module" src="utils/moneytest.js"></script>
-
+  <script type="module" src="scripts/cart.js"></script>
 </head>
 
 <body>
