--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -12,11 +12,23 @@
   <script src="lib/jasmine-5.1.1/boot0.js"></script>
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
+   
+  
+
 
   <script type="module" src="utils/moneytest.js"></script>
-  <script type="module" src="scripts/cart.js"></script>
+  <script type="module" src="scripts/cartTest.js"></script>
+  <script type="module" src="scripts/checkout/ordersummarytest.js"></script>
+
+
+
+
+
+
 </head>
 
 <body>
+  <div class="js-test-container"></div> 
+ 
 </body>
 </html>
