wrote tests for Product and Clothing Classes

--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -19,6 +19,9 @@
   <script type="module" src="utils/moneytest.js"></script>
   <script type="module" src="scripts/cartTest.js"></script>
   <script type="module" src="scripts/checkout/ordersummarytest.js"></script>
+  <script type="module" src="data/productTests.js"></script>
+
+
 
 
 
